kompose-deployment-ingress/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --out kompose-deployment/ --controller deployment --replicas 2
    kompose.service.expose: nodejs-example-app.zer0.hu
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: app
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --out kompose-deployment/ --controller deployment --replicas 2
        kompose.service.expose: nodejs-example-app.zer0.hu
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/nodejs-example-app-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - args:
            - index.js
          command:
            - node
          image: zerosuxx/nodejs-example-app:0.1.0
          name: app
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
      restartPolicy: OnFailure
