kompose-deployment-ingress/app3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --out kompose-deployment-ingress/ --controller deployment --replicas 2
    kompose.service.expose: nodejs-example-app.zer0.hu
    kompose.service.expose.ingress-class-name: nginx
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: app3
  name: app3
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: app3
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --out kompose-deployment-ingress/ --controller deployment --replicas 2
        kompose.service.expose: nodejs-example-app.zer0.hu
        kompose.service.expose.ingress-class-name: nginx
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/nodejs-example-app-default: "true"
        io.kompose.service: app3
    spec:
      containers:
        - args:
            - index.js
          command:
            - node
          image: zerosuxx/nodejs-example-app:0.1.0
          name: app3
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
      restartPolicy: Always
