kompose-deployment-ingress/app3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert --out kompose-deployment-ingress/ --controller deployment --replicas 2
    kompose.service.expose: nodejs-example-app.zer0.hu
    kompose.service.expose.ingress-class-name: nginx
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: app3
  name: app3
spec:
  ingressClassName: nginx
  rules:
    - host: nodejs-example-app.zer0.hu
      http:
        paths:
          - backend:
              service:
                name: app3
                port:
                  number: 3000
            path: /
            pathType: Prefix
